js/js.translator/testData/incremental/invalidation/constValsWithCrossModuleInliner/lib2/l2.kt
fun qux() = FOO
inline fun bar() = FOO
